Fixing a small bug on the plot_two_SNP_heatmap notebook

--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -263,9 +263,15 @@
     "for i, sample_i in enumerate(samples):\n",
     "    for j, sample_j in enumerate(samples):\n",
     "        if i < j:\n",
-    "            count_matrix[i,j] = two_SNP_heatmap_df.xs((sample_i, sample_j))[\"count\"]\n",
+    "            try: \n",
+    "                count_matrix[i,j] = two_SNP_heatmap_df.xs((sample_i, sample_j))[\"count\"]\n",
+    "            except KeyError:\n",
+    "                count_matrix[i,j] = 0\n",
     "        elif j < i:\n",
-    "            count_matrix[i,j] = two_SNP_heatmap_df.xs((sample_j, sample_i))[\"count\"]\n",
+    "            try:\n",
+    "                count_matrix[i,j] = two_SNP_heatmap_df.xs((sample_j, sample_i))[\"count\"]\n",
+    "            except KeyError:\n",
+    "                count_matrix[i,j] = 0\n",
     "            \n",
     "count_matrix"
    ]
