Fixing samples ordering on the plot_two_SNP_heatmap notebook

--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -139,7 +139,7 @@
    ],
    "source": [
     "two_SNP_heatmap_df = pd.read_csv(snakemake.input.two_SNP_heatmap_csv)\n",
-    "samples=sorted(snakemake.params.samples)\n",
+    "samples = snakemake.params.samples\n",
     "two_SNP_heatmap_df"
    ]
   },
@@ -149,6 +149,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "samples_ordered_by_clade = [\n",
+    "                # A\n",
+    "                \"Escherichia_coli_MSB1_9D\",\n",
+    "                \"H131800734\",\n",
+    "                \"Escherichia_coli_MINF_8D\",\n",
+    "                \"Escherichia_coli_MSB1_1A\",\n",
+    "                \"Escherichia_coli_MSB1_8G\",\n",
+    "  \n",
+    "                # B1\n",
+    "                \"Escherichia_coli_MSB1_4E\",\n",
+    "                \"063_STEC\",\n",
+    "                \"CFT073\",\n",
+    "                \"Escherichia_coli_MSB2_1A\",\n",
+    "                \"Escherichia_coli_MINF_1D\",\n",
+    "               \n",
+    "                # D\n",
+    "                \"Escherichia_coli_MSB1_7C\",\n",
+    "                \"Escherichia_coli_MINF_7C\",\n",
+    "                \"Escherichia_coli_MSB1_6C\",\n",
+    "                \"ST38\",\n",
+    "                \"Escherichia_coli_MSB1_7A\",\n",
+    "                \"Escherichia_coli_MSB1_3B\",\n",
+    "                \n",
+    "                # F\n",
+    "                \"Escherichia_coli_MSB1_4I\",\n",
+    "                \"Escherichia_coli_MINF_1A\",\n",
+    "                \"Escherichia_coli_MINF_9A\",\n",
+    "                \"Escherichia_coli_MSB1_8B\",\n",
+    "]\n",
+    "\n",
     "sample_to_colour = {\n",
     "                # A\n",
     "                \"Escherichia_coli_MSB1_9D\" : \"#FF00FF\",\n",
@@ -178,6 +208,17 @@
     "                \"Escherichia_coli_MINF_9A\" : \"#FF0000\",\n",
     "                \"Escherichia_coli_MSB1_8B\" : \"#FF0000\"\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort samples according to their order in samples_ordered_by_clade\n",
+    "samples = [sample for sample in samples_ordered_by_clade if sample in samples]\n",
+    "samples"
    ]
   },
   {
@@ -262,14 +303,11 @@
     "count_matrix = np.zeros((len(samples), len(samples)), dtype=np.uint8)\n",
     "for i, sample_i in enumerate(samples):\n",
     "    for j, sample_j in enumerate(samples):\n",
-    "        if i < j:\n",
+    "        if i != j:\n",
+    "            smaller_sample = min(sample_i, sample_j)\n",
+    "            larger_sample = max(sample_i, sample_j)        \n",
     "            try: \n",
-    "                count_matrix[i,j] = two_SNP_heatmap_df.xs((sample_i, sample_j))[\"count\"]\n",
-    "            except KeyError:\n",
-    "                count_matrix[i,j] = 0\n",
-    "        elif j < i:\n",
-    "            try:\n",
-    "                count_matrix[i,j] = two_SNP_heatmap_df.xs((sample_j, sample_i))[\"count\"]\n",
+    "                count_matrix[i,j] = two_SNP_heatmap_df.xs((smaller_sample, larger_sample))[\"count\"]\n",
     "            except KeyError:\n",
     "                count_matrix[i,j] = 0\n",
     "            \n",
