Trying to get a better 2-SNP heatmap

--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -348,7 +348,8 @@
     "for tick in ax.get_yticklabels():\n",
     "    tick.set_color(sample_to_colour[tick._text])\n",
     "fig = ax.get_figure()\n",
-    "fig.savefig(snakemake.output.two_SNP_heatmap_plot)\n",
+    "fig.tight_layout()\n",
+    "fig.savefig(snakemake.output.two_SNP_heatmap_plot, dpi=600, )\n",
     "fig"
    ]
   }
