Trying to get a better 2-SNP heatmap

--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -349,6 +349,7 @@
     "    tick.set_color(sample_to_colour[tick._text])\n",
     "fig = ax.get_figure()\n",
     "fig.tight_layout()\n",
+    "fig.set_size_inches(10, 10)\n",
     "fig.savefig(snakemake.output.two_SNP_heatmap_plot, dpi=600, )\n",
     "fig"
    ]
