Updating plot_two_SNP_heatmap.ipynb

--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[63351 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "[63351 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "       'H131800734', 'ST38'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        " 'MSB1_8B']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "[177 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +735,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>063_STEC</td>\n",
+       "      <td>063_STEC</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>063_STEC</td>\n",
        "      <td>CFT073</td>\n",
@@ -759,22 +765,10 @@
        "      <td>1723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>063_STEC</td>\n",
-       "      <td>MINF_7C</td>\n",
-       "      <td>253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>339</th>\n",
-       "      <td>ST38</td>\n",
-       "      <td>MSB1_7C</td>\n",
-       "      <td>359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>344</th>\n",
@@ -800,29 +794,35 @@
        "      <td>MSB2_1A</td>\n",
        "      <td>747</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>ST38</td>\n",
+       "      <td>ST38</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>354 rows × 3 columns</p>\n",
+       "<p>400 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    FIRST_SAMPLE SECOND_SAMPLE  count\n",
+       "361     063_STEC      063_STEC      0\n",
        "0       063_STEC        CFT073   4138\n",
        "1       063_STEC    H131800734     67\n",
        "2       063_STEC       MINF_1A   1964\n",
        "3       063_STEC       MINF_1D   1723\n",
-       "4       063_STEC       MINF_7C    253\n",
        "..           ...           ...    ...\n",
-       "339         ST38       MSB1_7C    359\n",
        "344         ST38       MSB1_8B    829\n",
        "348         ST38       MSB1_8G    130\n",
        "351         ST38       MSB1_9D    323\n",
        "353         ST38       MSB2_1A    747\n",
+       "375         ST38          ST38      0\n",
        "\n",
-       "[354 rows x 3 columns]"
+       "[400 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,6 +833,28 @@
     "count_df_rev = count_df.copy()\n",
     "count_df_rev = count_df_rev.rename(columns={\"FIRST_SAMPLE\": \"SECOND_SAMPLE\", \"SECOND_SAMPLE\": \"FIRST_SAMPLE\"})\n",
     "count_df = pd.concat([count_df, count_df_rev], ignore_index=True)\n",
+    "\n",
+    "# make an 0-count all sample pairs df\n",
+    "first_sample_zero_count = []\n",
+    "second_sample_zero_count = []\n",
+    "zero_count = []\n",
+    "for first_sample in samples:\n",
+    "    for second_sample in samples:\n",
+    "        first_sample_zero_count.append(first_sample)\n",
+    "        second_sample_zero_count.append(second_sample)\n",
+    "        zero_count.append(0)\n",
+    "all_zero_count_sample_pair = pd.DataFrame(data={\n",
+    "    \"FIRST_SAMPLE\":  first_sample_zero_count,\n",
+    "    \"SECOND_SAMPLE\": second_sample_zero_count,\n",
+    "    \"count\": zero_count})\n",
+    "\n",
+    "# merge the 0-cout all sample pairs df\n",
+    "count_df = count_df.merge(all_zero_count_sample_pair, on=[\"FIRST_SAMPLE\", \"SECOND_SAMPLE\"], how=\"outer\")\n",
+    "count_df[\"count\"] = count_df[\"count_x\"]\n",
+    "count_df[\"count\"] = np.nan_to_num(count_df[\"count\"]).astype(int)\n",
+    "\n",
+    "# fix and output the count df\n",
+    "count_df = count_df[[\"FIRST_SAMPLE\", \"SECOND_SAMPLE\", \"count\"]]\n",
     "count_df = count_df.sort_values(by=[\"FIRST_SAMPLE\", \"SECOND_SAMPLE\"])\n",
     "count_df.to_csv(snakemake.output.two_SNP_heatmap_count_df, index=False)\n",
     "count_df"
