Updating plot_two_SNP_heatmap.ipynb

--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -528,8 +528,12 @@
    ],
    "source": [
     "# sort samples according to their order in samples_ordered_by_clade\n",
+    "old_samples = samples\n",
     "samples = [sample for sample in samples_ordered_by_clade if sample in samples]\n",
-    "samples"
+    "\n",
+    "if len(samples) != len(old_samples):\n",
+    "    # different samples\n",
+    "    samples = old_samples"
    ]
   },
   {
@@ -952,9 +956,9 @@
    "source": [
     "ax = sns.heatmap(count_matrix, xticklabels=samples, yticklabels=samples, cmap=\"Reds\")\n",
     "for tick in ax.get_xticklabels():\n",
-    "    tick.set_color(sample_to_colour[tick._text])\n",
+    "    tick.set_color(sample_to_colour.get(tick._text, \"black\"))\n",
     "for tick in ax.get_yticklabels():\n",
-    "    tick.set_color(sample_to_colour[tick._text])\n",
+    "    tick.set_color(sample_to_colour.get(tick._text, \"black\"))\n",
     "fig = ax.get_figure()\n",
     "fig.tight_layout()\n",
     "fig.set_size_inches(10, 10)\n",
@@ -982,9 +986,9 @@
     "\n",
     "ax = sns.heatmap(count_matrix, xticklabels=samples, yticklabels=samples, cmap=\"Reds\", norm=LogNorm())\n",
     "for tick in ax.get_xticklabels():\n",
-    "    tick.set_color(sample_to_colour[tick._text])\n",
+    "    tick.set_color(sample_to_colour.get(tick._text, \"black\"))\n",
     "for tick in ax.get_yticklabels():\n",
-    "    tick.set_color(sample_to_colour[tick._text])\n",
+    "    tick.set_color(sample_to_colour.get(tick._text, \"black\"))\n",
     "fig = ax.get_figure()\n",
     "fig.tight_layout()\n",
     "fig.set_size_inches(10, 10)\n",
