--- a/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
+++ b/eda/plot_two_SNP_heatmap/plot_two_SNP_heatmap.ipynb
@@ -702,7 +702,7 @@
    ],
    "source": [
     "# do the groupby\n",
-    "two_SNP_heatmap_df = two_SNP_heatmap_df.groupby([\"FIRST_SAMPLE\", \"SECOND_SAMPLE\"]).count().rename(columns={\"PANGENOME_VARIATION_ID\": \"count\"})\n",
+    "two_SNP_heatmap_df = two_SNP_heatmap_df.groupby([\"FIRST_SAMPLE\", \"SECOND_SAMPLE\"]).count().rename(columns={\"PVID\": \"count\"})\n",
     "two_SNP_heatmap_df"
    ]
   },
